<resources>
    <string name="app_name">calc</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="editText_num1">숫자1 입력</string>
    <string name="editText_num2">숫자2 입력</string>

    <string name="button_num0">0</string>
    <string name="button_num1">1</string>
    <string name="button_num2">2</string>
    <string name="button_num3">3</string>
    <string name="button_num4">4</string>
    <string name="button_num5">5</string>
    <string name="button_num6">6</string>
    <string name="button_num7">7</string>
    <string name="button_num8">8</string>
    <string name="button_num9">9</string>

    <string name="button_add">더하기</string>
    <string name="button_sub">빼기</string>
    <string name="button_mul">곱하기</string>
    <string name="button_div">나누기</string>
    <string name="button_mod">나머지 값</string>

    <string name="textView_result">계산 결과:</string>

</resources>
