<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:padding="8dp"
    android:rowCount="9"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_num1"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="0"
        android:hint="@string/editText_num1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_num2"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="1"
        android:hint="@string/editText_num2"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_column="0"
        android:layout_row="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num0"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num3"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num4"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_column="0"
        android:layout_row="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_num5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num5"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num6"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num7"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num8"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_num9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_num9"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_row="4"
        android:text="@string/button_add"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_sub"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_row="5"
        android:text="@string/button_sub"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_mul"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_row="6"
        android:text="@string/button_mul"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_div"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_margin="8dp"
        android:layout_row="7"
        android:text="@string/button_div"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="match_parent"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/textView_result"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp" />

</GridLayout>
